TF-IDF models, YouTube URL parser

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -76,6 +76,20 @@
       {% endif %}
     </div>
 
+    <div>
+      {% if edu_result %}
+      <h4>Educational vs Recreational:</h4>
+      <p>{{ edu_result }}</p>
+      {% endif %}
+    </div>
+
+    <div>
+      {% if pol_result %}
+      <h4>Politics: Left vs Right</h4>
+      <p>{{ pol_result }}</p>
+      {% endif %}
+    </div>
+
   </body>
 
 </html>
