Bad word finder added

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -90,6 +90,13 @@
       {% endif %}
     </div>
 
+    <div>
+      {% if bw_result %}
+      <h4>Bad Words</h4>
+      <p>{{ bw_result }}</p>
+      {% endif %}
+    </div>
+
   </body>
 
 </html>
