--- a/webapp/static/css/style.css
+++ b/webapp/static/css/style.css
@@ -1,17 +1,51 @@
-body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #293249; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h1              { border-bottom: 10px solid #eee; }
-h2              { font-size: 1.2em; }
-.page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
-                  padding: 0.8em; background: white; }
-.entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
-.entries li h2  { margin-left: -1em; }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
-.add-entry dl   { font-weight: bold; }
-.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
-                  margin-bottom: 1em; background: #fafafa; }
-.flash          { background: #cee5F5; padding: 0.5em;
-                  border: 1px solid #aacbe2; }
-.error          { background: #f0d6d6; padding: 0.5em; }
+body{
+  background-color: #D6DBDF;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3{
+  margin: 0;
+}
+
+#container{
+  background-color: white;
+  width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#header{
+  background-color: #34495E;
+  padding: 20px;
+  color: white;
+  text-align: center
+}
+
+#content{
+  padding: 10px;
+}
+
+#left{
+  background-color: #D6DBDF;
+  width: 280px;
+  float: left;
+  padding: 10px;
+}
+
+#right{
+  background-color: #D6DBDF;
+  width: 640px;
+  float: right;
+  padding: 10px;
+}
+
+#footer{
+  clear: both;
+  padding: 10px;
+  background-color: #AEB6BF;
+  color: white;
+}
+
+/* .container * {
+    padding: 10px;
+} */
