--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,102 +1,133 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<head>
-  <title>Daniel's Insight App</title>
+    <head>
+      <title>Video Digest</title>
+       <link rel="stylesheet" type = "text/css" href="static/css/style.css" />
 
-  <!-- link to online stylesheet, could also link to local css file -->
-   <link rel="stylesheet" href="http://stash.compjour.org/assets/css/foundation.css">
+       <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+       <script type="text/javascript">
+             google.charts.load('current', {'packages':['gauge']});
+             google.charts.setOnLoadCallback(drawChart);
 
-</head>
+             function drawChart() {
 
-<body>
+               var data = google.visualization.arrayToDataTable([
+                 ['Label', 'Value'],
+                 ['edu vs fluff', 50],
+                 ['left vs right', 50]
+               ]);
 
-  <body style="width: 1024px; margin: auto;">
-    <div class="container">
-      <h1>video sleuth</h1>
-      <p> MVP for Insight Data Science Project, Daniel Zurek</p>
+               var options = {
+                 width: 640, height: 200,
+                 greenFrom: 0, greenTo: 20, greenColor: '#5495ff',
+                 redFrom: 80, redTo: 100,
+                 yellowFrom:20, yellowTo: 90,
+                 minorTicks: 5
+               };
 
-      <!-- text entry form, passes variable 'ytID' to app.py -->
-      <form role="form" method='POST' action='/'>
-        <div class="form-group">
-          <input type="text" name="ytID" placeholder="Enter youtube ID" style="max-width: 300px;" autofocus required>
-          </div>
-          <button type="submit">Submit</button>
-      </form>
+               var chart = new google.visualization.Gauge(document.getElementById('chart_div'));
 
-      <br>
-        {% for error in errors %}
-      <h4>{{ error }}</h4>
-      {% endfor %}
-    </div>
+               chart.draw(data, options);
+             }
+        </script>
 
-    <div>
-      <!-- block gets rendered if youtube_id variable is present -->
-      {% if youtube_id %}
-      <h4>Video of interest:</h4>
-      <br>
-      <!-- Python code goes in double curlies -->
-      <iframe src= {{ "https://www.youtube.com/embed/" + youtube_id }} width="640" height="480" frameborder="0" allowfullscreen></iframe>
-      {% endif %}
-    </div>
-    <br>
-    <div>
-      <!-- Again, here it writes variable 'result' to the page-->
-      {% if topic_result %}
-      <h4>Video classified as:</h4>
-      <p>{{ topic_result }}</p>
-      {% endif %}
-    </div>
+    </head>
+          <body>
+               <div id = "container">
+                    <div id = "header">
+                         <h1>video digest</h1>
+                         <p> Insight Data Science Project, Daniel Zurek</p>
+                    </div>
+                        <div id = "content">
+                            <div id = "left">
+                              Enter a YouTube URL to run a content analysis. <hr/>
+                                <!-- text entry form, passes variable 'ytID' to app.py -->
+                                <form role="form" method='POST' action='/'>
+                                  <div class="form-group">
+                                    <input type="text" name="ytID" placeholder="Enter youtube URL" style="max-width: 300px;" autofocus required>
+                                  </div>
+                                    <button type="submit">Submit</button>
+                                </form>
+                                <br>
+                                  {% for error in errors %}
+                                <h4>{{ error }}</h4>
+                                {% endfor %}
 
-    <div>
-      {% if partial_transcript %}
-      <h4>Partial transcript:</h4>
-      <p>{{ partial_transcript }}</p>
-      {% endif %}
-    </div>
+                                <div>
+                                  <!-- Again, here it writes variable 'result' to the page-->
+                                  {% if topic_result %}
+                                  <h4>Video classified as:</h4>
+                                  <p>{{ topic_result }}</p>
+                                  {% endif %}
+                                </div>
 
-    <div>
-      {% if views %}
-      <h4>Views:</h4>
-      <p>{{ views }}</p>
-      {% endif %}
-    </div>
+                                <div>
+                                  {% if t_sentiment %}
+                                  <h4>Transcript sentiment:</h4>
+                                  <p>score: {{ t_sentiment }}, magnitude: {{ t_magnitude_n }}</p>
+                                  {% endif %}
+                                </div>
 
-    <div>
-      {% if t_sentiment %}
-      <h4>Transcript sentiment:</h4>
-      <p>score: {{ t_sentiment }}, magnitude: {{ t_magnitude_n }}</p>
-      {% endif %}
-    </div>
+                                <div>
+                                  {% if c_sentiment %}
+                                  <h4>Comments sentiment:</h4>
+                                  <p>score: {{ c_sentiment }}, magnitude: {{ c_magnitude_n }}</p>
+                                  {% endif %}
+                                </div>
 
-    <div>
-      {% if c_sentiment %}
-      <h4>Comments sentiment:</h4>
-      <p>score: {{ c_sentiment }}, magnitude: {{ c_magnitude_n }}</p>
-      {% endif %}
-    </div>
+                                <div>
+                                  {% if bw_result %}
+                                  <h4>Bad Words</h4>
+                                  <p>{{ bw_result }}</p>
+                                  {% endif %}
+                                </div>
 
-    <div>
-      {% if edu_result %}
-      <h4>Educational vs Recreational:</h4>
-      <p>{{ edu_result }}</p>
-      {% endif %}
-    </div>
+                            </div>
+                            <div id = "right">
+                                <div id = "video">
+                                      <div>
+                                        <!-- block gets rendered if youtube_id variable is present -->
+                                        {% if youtube_id %}
+                                        <!-- Python code goes in double curlies -->
+                                        <iframe src= {{ "https://www.youtube.com/embed/" + youtube_id }}  frameborder="0" width="640px" height="360px"></iframe>
+                                        {% endif %}
 
-    <div>
-      {% if pol_result %}
-      <h4>Politics: Left vs Right</h4>
-      <p>{{ pol_result }}</p>
-      {% endif %}
-    </div>
+                                      </div>
+                                      {% if youtube_id %}
+                                      <!--Div that will hold the gauges-->
+                                      <div id="chart_div" align='center'></div>
+                                      {% endif %}
 
-    <div>
-      {% if bw_result %}
-      <h4>Bad Words</h4>
-      <p>{{ bw_result }}</p>
-      {% endif %}
-    </div>
+                                      <div>
+                                        {% if partial_transcript %}
+                                        <h4>Partial transcript:</h4>
+                                        <p>{{ partial_transcript }}</p>
+                                        {% endif %}
+                                      </div>
+                                </div>
 
-  </body>
+                                <div id = "tfidf">
+                                      <div>
+                                        {% if edu_result %}
+                                        <h4>Educational vs Recreational:</h4>
+                                        <p>{{ edu_result }}</p>
+                                        {% endif %}
+                                      </div>
 
+                                      <div>
+                                        {% if pol_result %}
+                                        <h4>Politics: Left vs Right</h4>
+                                        <p>{{ pol_result }}</p>
+                                        {% endif %}
+                                      </div>
+
+                                    </div>
+                            </div>
+                        </div>
+                    <div id = "footer">
+                        Copyright &copy; Daniel B. Zurek, 2018
+                    </div>
+               </div>
+          </body>
 </html>
