Added temp audio file deletion

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -71,7 +71,7 @@
                                   {% if bw_result %}
                                   <p>{{ bw_result }}</p>
                                   {% endif %}
-                                </div>
+                                </div><hr/>
 
                                 <div>
                                   <h4>Partial transcript:</h4>
