--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -5,23 +5,22 @@
       <title>Video Digest</title>
        <link rel="stylesheet" type = "text/css" href="static/css/style.css" />
 
+       <!-- Pol gauge graph -->
        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
        <script type="text/javascript">
              google.charts.load('current', {'packages':['gauge']});
              google.charts.setOnLoadCallback(drawChart);
 
              function drawChart() {
-               var tfidf_edu = {{ results['edu'] | safe }}
                var tfidf_pol = {{ results['pol'] | safe }}
 
                var data = google.visualization.arrayToDataTable([
                  ['Label', 'Value'],
-                 ['info vs fluff', {v: tfidf_edu, f: ''}],
                  ['left vs right', {v: tfidf_pol, f: ''}]
                ]);
 
                var options = {
-                 width: 500, height: 200,
+                 width: 250, height: 200,
                  greenFrom: -100, greenTo: -80, greenColor: '#5495ff',
                  redFrom: 80, redTo: 100,
                  minorTicks: 5,
@@ -29,11 +28,39 @@
                  max: 100
                };
 
-               var chart = new google.visualization.Gauge(document.getElementById('chart_div'));
+               var chart = new google.visualization.Gauge(document.getElementById('chart_pol'));
 
                chart.draw(data, options);
              }
         </script>
+
+        <!-- Edu gauge graph -->
+        <script type="text/javascript">
+              google.charts.load('current', {'packages':['gauge']});
+              google.charts.setOnLoadCallback(drawChart);
+
+              function drawChart() {
+                var tfidf_edu = {{ results['edu'] | safe }}
+
+                var data = google.visualization.arrayToDataTable([
+                  ['Label', 'Value'],
+                  ['info vs fluff', {v: tfidf_edu, f: ''}]
+                ]);
+
+                var options = {
+                  width: 250, height: 200,
+                  greenFrom: -100, greenTo: -80, greenColor: '#5495ff',
+                  redFrom: 80, redTo: 100,
+                  minorTicks: 5,
+                  min: -100,
+                  max: 100
+                };
+
+                var chart = new google.visualization.Gauge(document.getElementById('chart_edu'));
+
+                chart.draw(data, options);
+              }
+         </script>
 
     </head>
           <body>
@@ -51,12 +78,49 @@
                                   </div>
                                     <button type="submit">Submit</button>
                                 </form>
-                                <br>
                                   {% for error in errors %}
                                 <h4>{{ error }}</h4>
                                 {% endfor %}
 
-                                <h4>Transcript topics classified as:</h4>
+                                <p>Tick content axes to analyze</p>
+
+                                Info vs Fluff <input type="checkbox" id="edu_check"  onclick="edu_func()"><br>
+                                Left vs Right <input type="checkbox" id="pol_check"  onclick="pol_func()">
+                                                              
+                                <hr/>
+<!--
+                                <p id="edu_text" style="display:none">Edu analysis lined up</p>
+                                <p id="pol_text" style="display:none">Pol analysis lined up</p> -->
+
+                                <script>
+                                function edu_func() {
+                                    var edu_checkBox = document.getElementById("edu_check");
+                                    // var edu_text = document.getElementById("edu_text");
+                                    if (edu_checkBox.checked == true){
+                                        // edu_text.style.display = "block";
+                                        chart_edu.style.display = "block";
+                                    } else {
+                                       // edu_text.style.display = "none";
+                                       chart_edu.style.display = "none";
+                                    }
+                                }
+                                </script>
+
+                                <script>
+                                function pol_func() {
+                                    var pol_checkBox = document.getElementById("pol_check");
+                                    // var pol_text = document.getElementById("pol_text");
+                                    if (pol_checkBox.checked == true){
+                                        // pol_text.style.display = "block";
+                                        chart_pol.style.display = "block";
+                                    } else {
+                                       // pol_text.style.display = "none";
+                                       chart_pol.style.display = "none";
+                                    }
+                                }
+                                </script>
+
+                                <h4>Topics extracted</h4>
                                 <div id = 'video_tags'>
                                   <!-- Again, here it writes variable 'result' to the page-->
                                   {% if results %}
@@ -67,14 +131,14 @@
                                 </div> <hr/>
 
                                 <div>
-                                  <h4>Bad Words:</h4>
+                                  <h4>Bad Words</h4>
                                   {% if bw_result %}
                                   <p>{{ bw_result }}</p>
                                   {% endif %}
                                 </div><hr/>
 
                                 <div>
-                                  <h4>Partial transcript:</h4>
+                                  <h4>Partial transcript</h4>
                                   {% if partial_transcript %}
                                   <p>{{ partial_transcript }}</p>
                                   {% endif %}
@@ -89,29 +153,33 @@
                                         <!-- Python code goes in double curlies -->
                                         <iframe src= {{ "https://www.youtube.com/embed/" + youtube_id }}  frameborder="0" width="640px" height="360px"></iframe>
                                         {% endif %}
+                                      </div><hr/>
 
-                                      </div> <hr/>
-
-                                         <h4 align="center">Content Modules</h4>
+                                      <div id = 'modules'>
+                                           <h4 align="center">Content Modules</h4>
                                         {% if youtube_id %}
-                                        <!--Div that will hold the gauges-->
-                                        <div id="chart_div" align='center'></div>
-                                        <p weight = 'bold'>Add more modules!</p><hr/>
-                                        {% endif %}
+                                            <!--Div that will hold the gauges-->
+                                            <div id="chart_edu" style="display:none"> </div>
+                                            <div id="chart_pol" style="display:none"> </div>
+                                            <!-- <img src="static/plus.png" class=float-right style='height: 180px;'/> -->
+                                            {% endif %}
+
+                                      </div>
+                                      <p style='text-align:right; text-decoration: underline;' >Add more modules!</p><hr/>
 
                                         <div>
-                                          <h4>Transcript sentiment:</h4>
+                                          <h4>Audio transcript sentiment</h4>
                                           {% if t_sentiment %}
                                           <!-- <p> score: {{ t_sentiment }}, magnitude: {{ t_magnitude_n }}</p> -->
-                                          <img src="static/sentiment_t.png"  style='height: 100%; width: 100%; object-fit: cover'/>
+                                          <img src="static/plots/sentiment_t.png"  style='height: 100%; width: 100%; object-fit: cover'/>
                                           {% endif %}
                                         </div> <hr/>
 
                                         <div>
-                                          <h4>Comments sentiment:</h4>
+                                          <h4>Comments sentiment</h4>
                                           {% if c_sentiment %}
                                           <!-- <p> score: {{ t_sentiment }}, magnitude: {{ t_magnitude_n }}</p> -->
-                                          <img src="static/sentiment_c.png"  style='height: 100%; width: 100%; object-fit: cover'/>
+                                          <img src="static/plots/sentiment_c.png"  style='height: 100%; width: 100%; object-fit: cover'/>
                                           {% endif %}
                                         </div> <hr/>
                                 </div>
