--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
     <head>
-      <title>Video Digest</title>
+      <title>ScoopTube</title>
        <link rel="stylesheet" type = "text/css" href="static/css/style.css" />
 
        <!-- Pol gauge graph -->
@@ -66,7 +66,8 @@
           <body>
                <div id = "container">
                     <div id = "header">
-                         <h1>video digest</h1>
+                      <img src='static/ScoopTube-white-small.png'/>
+                         <!-- <h1>video digest</h1> -->
                     </div>
                         <div id = "content">
                             <div id = "left">
@@ -86,7 +87,7 @@
 
                                 Info vs Fluff <input type="checkbox" id="edu_check"  onclick="edu_func()"><br>
                                 Left vs Right <input type="checkbox" id="pol_check"  onclick="pol_func()">
-                                                              
+
                                 <hr/>
 <!--
                                 <p id="edu_text" style="display:none">Edu analysis lined up</p>
