--- a/webapp/static/css/style.css
+++ b/webapp/static/css/style.css
@@ -19,7 +19,8 @@ h1, h2, h3, h4{
   background-color: #34495E;
   padding: 20px;
   color: white;
-  text-align: center
+  text-align: center;
+  height: auto;
 }
 
 #content{
