test for right skl version

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                          <!-- <h1>video digest</h1> -->
                     </div>
                         <div id = "content">
-                              Enter a YouTube URL to run a content analysis. <hr/>
+                              (SKL 0.19.2) Enter a YouTube URL to run a content analysis. <hr/>
                                 <!-- text entry form, passes variable 'ytID' to app.py -->
                                 <form role="form" ng-submit="getResults()">
                                   <div class="form-group">
